operand and operator input working

--- a/index.html
+++ b/index.html
@@ -10,80 +10,42 @@
 <body>
     <div class="frame">
         <div class="display-container">
-            <div class="screen">
-                <span>0</span>
-            </div>
+            <div class="screen">0</div>
         </div>
         <div class="button-container">
             <div class="top">
                 <div class="row first">
-                    <div class="btn-square seven">
-                        <a class="btn-square">7</a>
-                    </div>
-                    <div class="btn-square eight">
-                        <a class="btn-square">8</a>
-                    </div>
-                    <div class="btn-square nine">
-                        <a class="btn-square">9</a>
-                    </div>
-                    <div class="btn-square modulo">
-                        <a class="btn-square">%</a>
-                    </div>
-                    <div class="btn-square divide">
-                        <a class="btn-square">/</a>
-                    </div>
+                    <div class="btn-square simp-input seven">7</div>
+                    <div class="btn-square simp-input eight">8</div>
+                    <div class="btn-square simp-input nine">9</div>
+                    <div class="btn-square operator modulo">%</div>
+                    <div class="btn-square operator divide">/</div>
                 </div>
                 <div class="row second">
-                    <div class="btn-square four">
-                        <a class="btn-square">4</a>
-                    </div>
-                    <div class="btn-square five">
-                        <a class="btn-square">5</a>
-                    </div>
-                    <div class="btn-square six">
-                        <a class="btn-square">6</a>
-                    </div>
-                    <div class="btn-square multiply">
-                        <a class="btn-square">X</a>
-                    </div>
-                    <div class="btn-square subtract">
-                        <a class="btn-square">-</a>
-                    </div>
+                    <div class="btn-square simp-input four">4</div>
+                    <div class="btn-square simp-input five">5</div>
+                    <div class="btn-square simp-input six">6</div>
+                    <div class="btn-square operator multiply">*</div>
+                    <div class="btn-square operator subtract">-</div>
                 </div>
             </div>
             <div class="bottom">
                 <div class="bottom-square-btn-container">
                     <div class="row third">
-                        <div class="btn-square one">
-                            <a class="btn-square">1</a>
-                        </div>
-                        <div class="btn-square two">
-                            <a class="btn-square">2</a>
-                        </div>
-                        <div class="btn-square three">
-                            <a class="btn-square">3</a>
-                        </div>
+                        <div class="btn-square simp-input one">1</div>
+                        <div class="btn-square simp-input two">2</div>
+                        <div class="btn-square simp-input three">3</div>
                     </div>
                     <div class="row fourth">
-                        <div class="btn-square zero">
-                            <a class="btn-square">0</a>
-                        </div>
-                        <div class="btn-square point">
-                            <a class="btn-square">.</a>
-                        </div>
-                        <div class="btn-square clear">
-                            <a class="btn-square">C</a>
-                        </div>
+                        <div class="btn-square simp-input zero">0</div>
+                        <div class="btn-square simp-input point">.</div>
+                        <div class="btn-square clear">C</div>
                     </div>
                 </div>
                 <div class="bottom-rect-btn-container">
                     <div class="row plus-equals">
-                        <div class="btn-rect plus">
-                            <a class="btn-rect">+</a>
-                        </div>
-                        <div class="btn-rect equals">
-                            <a class="btn-rect">=</a>
-                        </div>
+                        <div class="btn-rect operator plus">+</div>
+                        <div class="btn-rect equals">=</div>
                     </div>
                 </div>
             </div>
