--- a/index.html
+++ b/index.html
@@ -5,47 +5,50 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>calculator</title>
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="frame">
         <div class="display-container">
-            <div class="screen">0</div>
+            <div class="screen-wrap">
+                <div class="screen">0</div>
+            </div>
         </div>
         <div class="button-container">
             <div class="top">
                 <div class="row first">
-                    <div class="btn-square simp-input seven">7</div>
-                    <div class="btn-square simp-input eight">8</div>
-                    <div class="btn-square simp-input nine">9</div>
-                    <div class="btn-square operator modulo">%</div>
-                    <div class="btn-square operator divide">/</div>
+                    <div class="btn square simp-input blue" id="seven">7</div>
+                    <div class="btn square simp-input blue" id="eight">8</div>
+                    <div class="btn square simp-input blue" id="nine">9</div>
+                    <div class="btn square operator" id="modulo">%</div>
+                    <div class="btn square operator" id="divide">/</div>
                 </div>
                 <div class="row second">
-                    <div class="btn-square simp-input four">4</div>
-                    <div class="btn-square simp-input five">5</div>
-                    <div class="btn-square simp-input six">6</div>
-                    <div class="btn-square operator multiply">*</div>
-                    <div class="btn-square operator subtract">-</div>
+                    <div class="btn square simp-input blue" id="four">4</div>
+                    <div class="btn square simp-input blue" id="five">5</div>
+                    <div class="btn square simp-input blue" id="six">6</div>
+                    <div class="btn square operator" id="multiply">*</div>
+                    <div class="btn square operator" id="subtract">-</div>
                 </div>
             </div>
             <div class="bottom">
-                <div class="bottom-square-btn-container">
+                <div class="bottom-sqr-btn-container">
                     <div class="row third">
-                        <div class="btn-square simp-input one">1</div>
-                        <div class="btn-square simp-input two">2</div>
-                        <div class="btn-square simp-input three">3</div>
+                        <div class="btn square simp-input blue" id="one">1</div>
+                        <div class="btn square simp-input blue" id="two">2</div>
+                        <div class="btn square simp-input blue" id="three">3</div>
                     </div>
                     <div class="row fourth">
-                        <div class="btn-square simp-input zero">0</div>
-                        <div class="btn-square simp-input point">.</div>
-                        <div class="btn-square clear">C</div>
+                        <div class="btn square simp-input blue" id="zero">0</div>
+                        <div class="btn square simp-input blue" id="point">.</div>
+                        <div class="btn square blue" id="clear">C</div>
                     </div>
                 </div>
                 <div class="bottom-rect-btn-container">
                     <div class="row plus-equals">
-                        <div class="btn-rect operator plus">+</div>
-                        <div class="btn-rect equals">=</div>
+                        <div class="btn rect operator" id="plus">+</div>
+                        <div class="btn rect" id="equals">=</div>
                     </div>
                 </div>
             </div>
