can string operations together

--- a/index.html
+++ b/index.html
@@ -11,7 +11,14 @@
 <body>
     <div class="frame">
         <div class="display-container">
-            <div class="screen">0</div>
+            <div class="container-screen">
+                <div class="screen">
+                    <div class="operator-screen">
+                        <span id="operator-screen"></span>
+                    </div>
+                    <div class="result-screen">0</div>
+                </div>
+            </div>
         </div>
         <div class="button-container">
             <div class="top">
